Update client
